Getting the site presentable

--- a/canvas_cutting/templates/form.html
+++ b/canvas_cutting/templates/form.html
@@ -1,5 +1,17 @@
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
+
+<h1>DSA Turf Cutting App</h1>
+<body>This is an app for generating turfs for canvasses for Medicare for All and other DSA efforts. Type in the center address, the number of turfs you want, and the approximate number of doors per each turf. The app will email you some PDFs you can print out and use. Right now the app only works for Austin, Texas but we are looking to add new cities. It is still a work in progress, so if you have any feedback or would like to work on the Github please email Michael.L.Nachbar@gmail.com. Let's seize the means!
+</body>
+
 <form action="/cutter/" method="post">
     {% csrf_token %}
-    {{ form }}
+    {{ form.as_p}}
     <input type="submit" value="Submit" />
 </form>
